add isOpened
